4051 Don't free mdi_pathinfo_t in mptsas when device(s) are retired. Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Albert Lee <alee@omniti.com> Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org>